--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,7 @@
   padding: 0;
   box-sizing: border-box;
   text-align: center;
+  color: #19214d;
 }
 
 html {
@@ -22,7 +23,10 @@ html {
   display: flex;
   justify-content: center;
   align-items: center;
-  color: #fff;
+  color: white;
+}
+.nav h2{
+  color: #ffffff;
 }
 
 /* --------------login box container----------- */
