--- a/src/components/student/quiz/quizCard.module.css
+++ b/src/components/student/quiz/quizCard.module.css
@@ -54,7 +54,7 @@
     transition: .4s;
 }
 
-input:checked+ .slider {
+input:checked+.slider {
     background-color: #2196F3;
 }
 
@@ -66,4 +66,13 @@ input:checked+.slider:before {
     -webkit-transform: translateX(26px);
     -ms-transform: translateX(26px);
     transform: translateX(26px);
+}
+
+/* Rounded sliders */
+.slider.round {
+    border-radius: 34px;
+}
+
+.slider.round:before {
+    border-radius: 50%;
 }
