--- a/src/components/faculty/quizzForm/Quizz.module.css
+++ b/src/components/faculty/quizzForm/Quizz.module.css
@@ -1,4 +1,4 @@
-/* .inp{
+.inp{
     width: 30rem;
     height: 3rem;
     padding: 0;
@@ -7,7 +7,7 @@
     border-bottom: 0.1rem solid rgb(10, 10, 107);
     text-decoration: bold;
     font-size: 2rem;
-} */
+}
 
 .QuizList {
     width: 100%;
