added addcourse form

--- a/src/components/student/quiz/quizCard.module.css
+++ b/src/components/student/quiz/quizCard.module.css
@@ -93,7 +93,7 @@ input:checked+.slider:before {
 
 .quizTable th {
     height: 2rem;
-    background-color: rgb(18, 59, 94);
+    background-color: #172a4d;
     color: #fff;
 }
 
