take attendance page added

--- a/src/components/faculty/attendance/attendance.module.css
+++ b/src/components/faculty/attendance/attendance.module.css
@@ -17,3 +17,25 @@
     display: flex;
     padding: 6px;
 }
+
+.TakeAttendance{
+    height: 100%;
+    width: 100%;
+}
+.TakeAttendance table{
+    width: 100%;
+    height: auto;
+    font-family: arial, sans-serif;
+    border-collapse: collapse;
+    text-align: center;
+}
+.TakeAttendance th {
+    height: 2rem;
+    background-color: rgb(18, 59, 94);
+    color: #fff;
+}
+
+.TakeAttendance td {
+    border: 0.1rem solid grey;
+    height: 2rem;
+}
